pictures, not professions

--- a/witcher/Templates/picture.html
+++ b/witcher/Templates/picture.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row mt-3 mb-3 p-3" style="background-color: #0075A2 !important">
     <div class="col-sm-12">
-        <h2 class="text-center">Profese ze světa zaklínače</h2>
+        <h2 class="text-center">Obrázky</h2>
     </div>
 </div>
 <div class="row">
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        <strong>Celkový počet profesí:</strong> {{ num_attachments }}
+        <strong>Celkový počet obrázků:</strong> {{ num_attachments }}
     </div>
 </div>
 {% endblock %} 
