--- a/witcher/Templates/base.html
+++ b/witcher/Templates/base.html
@@ -29,10 +29,10 @@
             <a class="nav-link active" href="{% url 'index' %}">Úvodní stránka</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'profession' %}">Profese</a>
+            <a class="nav-link" href="#">Profese</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Obrázky</a>
+            <a class="nav-link" href="{% url 'picture' %}">Obrázky</a>
           </li>
         </ul>
       </div>
