--- a/witcher/templates/base.html
+++ b/witcher/templates/base.html
@@ -24,7 +24,7 @@
 
       <!-- Navbar links -->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
+         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link active" href="{% url 'index' %}">Úvodní stránka</a>
           </li>
@@ -34,9 +34,17 @@
           </li>
           --->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'picture' %}">Obrázky</a>
+            <a class="nav-link active" href="{% url 'picture' %}">Obrázky</a>
           </li>
-        </ul>
+         </ul>
+          <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-link active">User: {{ user.get_username }}</li>
+            <li><a class="nav-link active" href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            {% else %}
+            <li><a class="nav-link active" href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            {% endif %}
+          </ul>
       </div>
     </nav>
 <div class="container-fluid">
