--- a/witcher/templates/index.html
+++ b/witcher/templates/index.html
@@ -20,6 +20,12 @@
                 <div id="popis" style="padding-top: 10px; display: none">
                     {{profession.description}}
                 </div>
+                <div class="row mb-3">
+                    <div class="col-sm-12 text-center">
+                        <a href="{% url 'profession-update' profession.pk %}" class="btn btn-primary">Upravit</a>
+                        <a href="{% url 'profession-delete' profession.pk %}" class="btn btn-danger">Smazat</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -28,6 +34,11 @@
 <div class="row">
     <div class="col-sm-12">
         <strong>Celkový počet postav:</strong> {{ num_professions }}
+    </div>
+</div>
+<div class="row mb-3">
+    <div class="col-sm-12 text-center">
+        <a href="{% url 'profession-create' %}" class="btn btn-success">Nová postava</a>
     </div>
 </div>
 <script>
