--- a/witcher/templates/index.html
+++ b/witcher/templates/index.html
@@ -11,7 +11,7 @@
     <div class="col-sm-4">
         <div class="card">
             {% if profession.poster %}
-            <img class="card-img-top" src="{{ profession.poster.url }}" alt="{{ profession.title }}">
+            <img class="card-img-top" height="450px" src="{{ profession.poster.url }}" alt="{{ profession.title }}">
             {% endif %}
             <div class="card-body">
                 <p class="card-text"><strong>Postava:</strong> {{ profession.name }}</p>
@@ -22,8 +22,12 @@
                 </div>
                 <div class="row mb-3">
                     <div class="col-sm-12 text-center">
+                        {% if perms.witcher.change_profession %}
                         <a href="{% url 'profession-update' profession.pk %}" class="btn btn-primary">Upravit</a>
+                        {% endif %}
+                        {% if perms.witcher.delete_profession %}
                         <a href="{% url 'profession-delete' profession.pk %}" class="btn btn-danger">Smazat</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -38,7 +42,9 @@
 </div>
 <div class="row mb-3">
     <div class="col-sm-12 text-center">
+        {% if perms.witcher.add_profession %}
         <a href="{% url 'profession-create' %}" class="btn btn-success">Nová postava</a>
+        {% endif %}
     </div>
 </div>
 <script>
